--- a/lib/policies/oauth2/views/login.ejs
+++ b/lib/policies/oauth2/views/login.ejs
@@ -1,7 +1,7 @@
 <link href="/css/style.css" rel="stylesheet" type="text/css" />
 <div class="main-container">
   <img src="/assets/eg-icon.svg" alt="Express Gateway Logo" />
-  <form action="/login" method="post" class="login-form">
+  <form action="/api/oauth2/login" method="post" class="login-form">
     <div class="form-row">
       <label>Username:</label>
       <input type="text" name="username" /><br />
