--- a/lib/policies/oauth2/views/dialog.ejs
+++ b/lib/policies/oauth2/views/dialog.ejs
@@ -1,15 +1,15 @@
-<link href="/css/style.css" rel="stylesheet" type="text/css" />
+<link href="/api/css/style.css" rel="stylesheet" type="text/css" />
 <div class="main-container">
-  <img src="/assets/eg-icon.svg" alt="Express Gateway Logo" />
-  <form action="/oauth2/authorize/decision" method="post" class="dialog-form">
+  <img src="/api/assets/eg-icon.svg" alt="Express Gateway Logo" />
+  <form action="/api/oauth2/authorize/decision" method="post" class="dialog-form">
     <input name="transaction_id" type="hidden" value="<%= transactionId %>" />
-    <p>Hi <%= user.firstname %>!</p>
-    <p><b><%= client.name %></b> is requesting access to your account.</p>
-    <p><b>Requesting Scopes:</b> <%= scope %></p>
-    <p>Do you approve?</p>
+    <p>Olá <%= user.firstname %>!</p>
+    <p><b><%= client.name %></b> está solicitando acesso.</p>
+    <p><b>Perfil solicitado:</b> <%= scope %></p>
+    <p>Você confirma o acesso?</p>
     <div>
-      <button type="submit" formmethod="POST" id="allow">Allow</button>
-      <button type="submit" formmethod="POST" id="deny">Cancel</button>
+      <button type="submit" formmethod="POST" id="allow">Confirmar</button>
+      <button type="submit" formmethod="POST" id="deny">Cancelar</button>
     </div>
   </form>
 </div>
