--- a/lib/policies/oauth2/views/login.ejs
+++ b/lib/policies/oauth2/views/login.ejs
@@ -1,17 +1,17 @@
-<link href="/css/style.css" rel="stylesheet" type="text/css" />
+<link href="/api/css/style.css" rel="stylesheet" type="text/css" />
 <div class="main-container">
-  <img src="/assets/eg-icon.svg" alt="Express Gateway Logo" />
+  <img src="/api/assets/eg-icon.svg" alt="Express Gateway Logo" />
   <form action="/api/oauth2/login" method="post" class="login-form">
     <div class="form-row">
-      <label>Username:</label>
+      <label>Usuário:</label>
       <input type="text" name="username" /><br />
     </div>
     <div class="form-row">
-      <label>Password:</label>
+      <label>Senha:</label>
       <input type="password" name="password" />
     </div>
     <div class="form-row button-container">
-      <button type="submit" formmethod="POST">Submit</button>
+      <button type="submit" formmethod="POST">Entrar</button>
     </div>
   </form>
 </div>
