correção erro view e customização da tela

--- a/lib/policies/oauth2/views/dialog.ejs
+++ b/lib/policies/oauth2/views/dialog.ejs
@@ -7,9 +7,13 @@
     <p><b><%= client.name %></b> está solicitando acesso.</p>
     <p><b>Perfil solicitado:</b> <%= scope %></p>
     <p>Você confirma o acesso?</p>
+    <!-- <div>
+      <button type="submit" formmethod="POST" id="allow">Allow</button>
+      <button type="submit" formmethod="POST" id="deny">Cancel</button>
+    </div> -->
     <div>
-      <button type="submit" formmethod="POST" id="allow">Confirmar</button>
-      <button type="submit" formmethod="POST" id="deny">Cancelar</button>
+      <input class="confirmar" type="submit" value="Confirmar" id="allow" />
+      <input class="cancelar" type="submit" value="Cancelar" name="cancel" id="deny" />
     </div>
   </form>
 </div>
