--- a/lib/policies/oauth2/public/css/style.css
+++ b/lib/policies/oauth2/public/css/style.css
@@ -1,6 +1,5 @@
 .main-container {
-  font-family: “Helvetica Neue”, Helvetica, Open Sans, Lato, “Univers”, Arial,
-    sans-serif;
+  font-family: "Roboto","Helvetica Neue",sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -51,15 +50,51 @@ input {
 }
 
 button {
-  background-color: #34a8c3;
+  background-color: #3880ff;
   border: none;
   color: white;
   padding: 10px 32px;
   font-size: 18px;
   width: 150px;
+  border-radius: 4px;
+  box-shadow: 0 3px 1px -2px rgba(0,0,0,0.2),0 2px 2px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12);
 }
 
 button:hover {
-  background-color: #0c6c7b;
+  background-color: #4c8dff;
+  cursor: pointer;
+}
+
+.confirmar {
+  height: auto;
+  background-color: #3880ff;
+  border: none;
+  color: white;
+  padding: 10px 32px;
+  font-size: 18px;
+  width: 150px;
+  border-radius: 4px;
+  box-shadow: 0 3px 1px -2px rgba(0,0,0,0.2),0 2px 2px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12);
+}
+
+.confirmar:hover {
+  background-color: #4c8dff;
+  cursor: pointer;
+}
+
+.cancelar {
+  height: auto;
+  background-color: #989aa2;
+  border: none;
+  color: white;
+  padding: 10px 32px;
+  font-size: 18px;
+  width: 150px;
+  border-radius: 4px;
+  box-shadow: 0 3px 1px -2px rgba(0,0,0,0.2),0 2px 2px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12);
+}
+
+.cancelar:hover {
+  background-color: #86888f;
   cursor: pointer;
 }
